[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/angel_01.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/Angel/Angel.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Disapear.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/images/halo.png" type="Texture" id=4]
[ext_resource path="res://assets/images/wing.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/bell_1.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/LeftWingRotation:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, -25.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/RightWingRotation:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -25.0, 25.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Halo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -40 ), Vector2( 0, -44 ), Vector2( 0, -40 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "stun"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body/LeftWingRotation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -17.1979, 9.94009 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/LeftWingRotation:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -25.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/RightWingRotation:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.0825, 9.75115 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RightWingRotation:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RightWingRotation/RightWing:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16.9175, -1.75115 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/RightWingRotation/RightWing:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/Halo:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -40 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/Halo:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Body/LeftWingRotation/LeftWing:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -14.8021, -1.94009 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Body/LeftWingRotation/LeftWing:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Angel" type="KinematicBody2D" groups=[
"angels",
"exits",
]]
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Halo" type="Sprite" parent="Body"]
position = Vector2( 0, -40 )
scale = Vector2( 0.322727, 0.25 )
z_index = 1
texture = ExtResource( 4 )

[node name="LeftWingRotation" type="Node2D" parent="Body"]
position = Vector2( -17.1979, 9.94009 )
rotation = -0.436332

[node name="LeftWing" type="Sprite" parent="Body/LeftWingRotation"]
position = Vector2( -14.8021, -1.94009 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="RightWingRotation" type="Node2D" parent="Body"]
position = Vector2( 15.0825, 9.75115 )
rotation = 0.436332

[node name="RightWing" type="Sprite" parent="Body/RightWingRotation"]
position = Vector2( 16.9175, -1.75115 )
rotation = -3.14159
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 5 )

[node name="ExitArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
visible = false
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="DissapearAudioPlayer" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 3 )
volume_db = -2.019
__meta__ = {
"_edit_lock_": true
}

[node name="SinnerExitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 6 )
volume_db = 17.165
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 24 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )
anims/stun = SubResource( 4 )
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_body_entered"]
